fix - selected item doesn't highlight on mobile

--- a/src/components/Documentation/Layout/SidebarMenu/styles.module.css
+++ b/src/components/Documentation/Layout/SidebarMenu/styles.module.css
@@ -60,10 +60,6 @@
 
   &:hover {
     color: #3c3937;
-
-    @media (--xs-scr) {
-      color: var(--color-gray-light);
-    }
   }
 
   &::before {
